--- a/Reto2-Viajes/styles/styles.css
+++ b/Reto2-Viajes/styles/styles.css
@@ -6,19 +6,23 @@ h1{
 h5{
     font-family: 'Titan One', cursive;
 }
+h4{
+    font-family: 'Titan One', cursive;
+    text-align: center;
+}
 a.btn-social,
 .btn-social
 {
     border-radius: 50%;
     color: #ffffff !important;
     display: inline-block;
-    height: 54px;
-    line-height: 54px;
+    height: 50px;
+    line-height: 50px;
     margin: 8px 4px;
     text-align: center;
     text-decoration: none;
     transition: background-color .3s;
-    width: 54px;
+    width: 50px;
 }
 
 .btn-social .fa,.btn-social i
@@ -206,4 +210,31 @@ img.card-img-top{
 }
 #col_right{
     padding-left: 60px;
+}
+#citation_nav{
+    text-decoration: none;
+    height: 54px;
+    width: 70px;
+    line-height: 54px;
+    background-color: red;
+    border-radius: 10%;
+    color:white;
+    transition: all 200ms;
+}
+
+#citation_nav:hover{
+    background-color: rgb(255, 156, 156);
+    color: rgb(255, 255, 255);
+    transform: scale(1.10);
+    transition: all 200ms;
+}
+#citation_nav_img{
+    width:500px;
+    height: 250px;
+}
+#citas_nav{
+    font-size: 40px;
+}
+#padding_citation_nav{
+    padding-left: 50px;
 }
